--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>
             Roman Stock Manager - R826-V2 comming soon!
         </title><!-- Behavioral Meta Data -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta content="yes" name="apple-mobile-web-app-capable">
         <meta content="ThemeWagon" name="author">
